--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-server.port=8080
+server.port=8088
+server.ssl.key-store=classpath:dudu.pfx
+server.ssl.key-store-password=H1kTtdsX
+server.ssl.keyStoreType=PKCS12
 server.servlet.context-path=/dudu
 
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/dudu?useUnicode=true&characterEncoding=utf8&useSSL=false
-jdbc.username=root
+#jdbc.url=jdbc:mysql://49.234.218.87:3306/dudu?useUnicode=true&characterEncoding=utf8&useSSL=false
+
+jdbc.url=jdbc:mysql://47.94.5.125:3306/dudu?useUnicode=true&characterEncoding=utf8&useSSL=false
+jdbc.username=dudu
 jdbc.password=123456
+
+#jdbc.username=liaozesong
+#jdbc.password=Lzslov123!
 
 #mybatis
 mybatis_config_file=mybatis-config.xml
